# kbee

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  zeabur.json
.github/workflows/: ci.yml
data/sporty_stage_ng/: 001_Flip the Coin.txt  001_SportyBet Date of Birth( DOB ) Verification via NIN – Error Handling & Next Steps.txt  002_Can I change my username?.txt  002_SportyBet Date of Birth( DOB ) Verification via NIN – Error Handling & Next Steps.txt  003_SportyBet Login Options Explained.txt  004_How do I delete a Bet from my Bet History.txt  004_Unable to access the SportyBet account due to Lost Sim.txt  005_How to Check the SportyBet App Version Installed on Your Mobile Device.txt  005_When does a promotion end? How long is the promotion available for?.txt  006_How to report spammers on the chat sections on SportyBet?.txt  006_Where can I view the responses to my support tickets?.txt  008_How do I change Decimal Odds to American Odds?.txt  009_Can SportyBet provide a loan?.txt  010_Discover, Share, and Save Time with Code Hub.txt  012_How to reset the Password?.txt  015_What is Code Hub ?.txt  (+572 more)
docs/: conversation-mining-plan.md  realtime-voice-poc.md
eval/: embedding_benchmark_results.json  embedding_clustering_benchmark.py  param_search.py  param_search_fast.py  param_search_results.json  results_step1_en.json  results_step2_zh.json  results_step3_bitext.json  step1_en_eval.py  step2_zh_eval.py  step3_bitext_eval.py  translations_cache.json
scripts/: build_zh_faq.py
tests/: test_ingest.py  test_realtime_server.py
(+54 files in other folders)
