[project]
name = "kbee"
version = "0.1.0"
description = "KBee — Lightweight AI customer service powered by RAG"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.6.0",
    "chainlit>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kbee"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["kbee"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
